--- a/nginx.yaml
+++ b/nginx.yaml
@@ -7,23 +7,23 @@ spec:
   selector:
     matchLabels:
       app: nginx
-    template:
-      metadata:
-        labels:
-          app: nginx
-      spec:
-        nodeSelector:
-        kubernetes.io/hostname: kind-worker
-        tolerations:
-        - key: "key"
-          operator: "Equals"
-          value: "nginx"
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      nodeSelector:
+        kubernetes.io/hostname: kind-worker  # Correct indentation for nodeSelector
+      tolerations:
+        - key: "nginx"  # This should match the key of the taint on the node
+          operator: "Equal"
+          value: "nginx"  # This should match the value of the taint on the node
           effect: "NoSchedule"
-        containers:
+      containers:
         - name: nginx
           image: nginx:latest
           ports:
-          - containerPort: 80
+            - containerPort: 80
 ---
 
 apiVersion: v1
@@ -34,7 +34,7 @@ spec:
   selector:
     app: nginx
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 80
   type: NodePort
