--- a/nginx.yaml
+++ b/nginx.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
+  namespace: default  # Specify the namespace here
 spec:
   replicas: 1
   selector:
@@ -30,6 +31,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  namespace: default  # Specify the namespace here
 spec:
   selector:
     app: nginx
